<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP -->
    <string name="app_name">TCD Analyses</string>
    <string name="title_documents">Documents</string>
    <string name="title_analyses">Historique d\'analyses</string>
    <string name="categorie_prompt">Choix de catégorie</string>
    <string name="login">S\'authentifier</string>
    <string name="register">S\'inscrire</string>
    <string name="subscribe">S\'inscrire</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>

    <!-- CREATION D'ANALYSE -->
    <string name="document_name_default">Mon_document.pdf</string>
    <string name="document_content_hint">Il était une fois …</string>
    <string name="new_analysis_title">Créer une analyse</string>
    <string name="new_analysis_name_hint">Nouvelle analyse …</string>
    <string name="new_analysis_name_autofill_hints">Analyse</string>
    <string name="new_analysis_created">Nouvelle analyse créée</string>
    <string name="analyze_button">ANALYSER</string>

    <!-- ANALYSE -->
    <string name="analysis_name_default">Analyse n°…</string>
    <string name="document_name_label">Nom du document :</string>
    <string name="analysis_status_label">Statut :</string>
    <string name="analysis_status_default" translatable="false">IN_PROGRESS</string>
    <string name="analysis_lasting_time_label">Temps restant estimé :</string>
    <string name="analysis_lasting_time_default">1 min, 3 sec</string>
    <string name="analysis_lasting_time_not_started">∞</string>
    <string name="analysis_step_name_label">Étape :</string>
    <string name="analysis_step_name_default" translatable="false">INITIALIZATION</string>
    <string name="document_genre_label">Genre :</string>
    <string name="document_genre_default">Poème</string>
    <string name="document_content_label">Contenu :</string>
    <string name="document_content_default">C’est un trou de verdure où chante une rivière,
        Accrochant follement aux herbes des haillons
        D’argent ; où le soleil, de la montagne fière,
        Luit : c’est un petit val qui mousse de rayons.

        Un soldat jeune, bouche ouverte, tête nue,
        Et la nuque baignant dans le frais cresson bleu,
        Dort ; il est étendu dans l’herbe, sous la nue,
        Pâle dans son lit vert où la lumière pleut.

        Les pieds dans les glaïeuls, il dort. Souriant comme
        Sourirait un enfant malade, il fait un somme :
        Nature, berce-le chaudement : il a froid.

        Les parfums ne font pas frissonner sa narine ;
        Il dort dans le soleil, la main sur sa poitrine,
        Tranquille. Il a deux trous rouges au côté droit.</string>
    <string name="login_message_username_required">Veuillez rentrer un nom d\'utilisateur</string>
    <string name="login_message_password_required">Veuillez rentrer un mot de passe</string>
    <string name="register_user_already_exists_message">Un utilisateur avec ce nom existe déjà</string>
    <string name="register_user_created_message">Votre compte a été créé</string>
    <string name="document_delete_message">Voulez-vous vraiment supprimer le document \"</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="document_delete_title">Supprimer document</string>
    <string name="login_progress_title">Connexion…</string>
    <string name="login_progress_message">Veuillez patienter…</string>
    <string name="analysis_status_not_started">En attente…</string>
    <string name="upload_document_title">Uploader</string>
    <string name="upload_document_title_label">Uploader un document</string>
    <string name="upload_document_file_name_label">Nom du fichier :</string>
    <string name="upload_document_name_hint">Nom</string>
    <string name="upload_document_genre_hint">Genre</string>
    <string name="upload_document_radio_text_label">Texte</string>
    <string name="upload_document_radio_link_label">Lien</string>
    <string name="upload_document_radio_file_label">Fichier</string>
    <string name="upload_document_content_text_hint">Contenu</string>
    <string name="upload_document_content_link_hint">Lien de fichier .pdf ou .txt</string>
    <string name="upload_document_content_link_malformed_message">Le lien doit finir par .txt ou .pdf</string>
    <string name="upload_document_button">Envoyer</string>
    <string name="upload_document_name_required_message">Veuillez entrer un nom</string>
    <string name="upload_document_genre_required_message">Veuillez entrer un genre</string>
    <string name="upload_document_content_required_message">Veuillez entrer du contenu</string>
    <string name="upload_document_file_required_message">Veuillez sélectionner un fichier</string>
    <string name="upload_document_select_file_button">CHOISIR FICHIER</string>
    <string name="analysis_delete_title">Suprimmer analyse</string>
    <string name="analysis_delete_message">Voulez-vous vraiment supprimer l\'analyse \"</string>
    <string name="document_delete_id_empty_error">DocumentId est vide</string>
    <string name="analysis_delete_id_empty_error">AnalysisId est vide</string>
    <string name="analysis_delete_progress_title">Suppression du document</string>
    <string name="analysis_delete_progress_message">Veuillez patienter…</string>
    <string name="error">Une erreur est survenue : %1$s</string>
    <string name="analysis_deleted_message">Analyse supprimée</string>
    <string name="document_created_message">Document créé</string>
    <string name="document_deleted_message">Document supprimé</string>

    <string name="serverError">Erreur serveur</string>
    <string name="badRequest">Erreur client (requête mal formée)</string>
    <string name="upload_document_file_must_be_format">Le format du fichier doit être .pdf ou .txt</string>
    <string name="upload_document_link_required_message">Veuillez entrer un lien vers un fichier .txt ou .pdf</string>
    <string name="analysis_result_content_hint">Langage : FR …</string>
    <string name="analysis_result_download_error">Une erreur est apparue durant l\'export des résultats</string>
    <string name="analysis_result_downloaded_message">%1$s téléchargé</string>
    <string name="analysis_result_creating_error">Une erreur est survenu à la sauvegarde du fichier de résultats</string>
    <string name="analysis_result_no_result_message">Cette analyse n\'a donnée aucun résultat</string>
    <string name="analysis_result_canceled_message">Cette analyse a été annulée</string>
    <string name="analysis_result_not_finished_message">Cette analyse n\'est pas encore finie</string>
    <string name="analysis_result_flag">Type : </string>
    <string name="analysis_result_start">Date de Début : </string>
    <string name="analysis_result_end">Date de Fin : </string>
    <string name="analysis_result_delay">Durée : </string>
    <string name="analysis_result_result">Résultat : </string>
    <string name="register_progress_title">Inscription</string>

    <string-array name="loginErrors">
        <item name="error_403">Nom d\'utilisateur ou mot de passe incorrect</item>
        <item name="error_404">Utilisateur non trouvé (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="registerErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Utilisateur non trouvé (Erreur Serveur)</item>
        <item name="error_409">Ce nom d\'utilisateur est déjà utilisé</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="documentUploadErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Document non trouvé (Erreur Serveur)</item>
        <item name="error_409">Un document avec ce contenu existe déjà</item>
        <item name="error_500">Le serveur n\'a pas réussi à télécharger le document. Le lien est-il correct ?</item>
    </string-array>
    <string-array name="deleteDocumentErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Document non trouvé (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="fetchDocumentsErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Analyse non trouvée (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="createAnalysisErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Analyse non trouvée (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="deleteAnalysisErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Analyse non trouvée (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
    <string-array name="fetchAnalysesErrors">
        <item name="error_403">Non autorisé</item>
        <item name="error_404">Analyse non trouvée (Erreur Serveur)</item>
        <item name="error_409">Conflit (Erreur Serveur)</item>
        <item name="error_500">Erreur serveur</item>
    </string-array>
</resources>