<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/textbox_back"
            android:padding="10dp"
            android:hint="@string/username"
            android:textSize="22sp"
            android:textColorHint="@color/colorHint"
            tools:ignore="MissingConstraints"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:drawableStart="@drawable/ic_person_outline_white_24dp">
        </EditText>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/textbox_back"
            android:hint="@string/password"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawableStart="@drawable/ic_lock_outline_white_24dp">
        </EditText>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_back"
            android:textColor="@color/colorLogin"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:text="@string/login">
        </Button>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_back"
            android:textColor="@color/colorLogin"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:text="@string/register">
        </Button>
    </LinearLayout>

</LinearLayout>